# slideTemplate

./: .gitignore  README.md  main.tex  preamble.tex  ref.bib
ch/: template.tex
code/: pyproject.toml
tools/: Excel2LaTeX.xla
