[tool.poetry]
package-mode = false
name = "dsa-2024-fall"
version = "0.1.0"
description = ""
authors = ["Carb <zlp@upc.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
